--- a/IGUANAS web/iguana.html
+++ b/IGUANAS web/iguana.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html>
+<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <title>IGUANAS</title>
+
 </head>
 
-<body>
 
-    <h1>
-        IGUANAS
-    </h1>
+<article>
+
+    <body>
+        <header>
+            <h1>
+                IGUANAS
+            </h1>
+        </header>
+        <img id="a" src="assets/img/bg-header.jpg">
+        <img id="b" src="assets/img/iguana-1.jpg">
+        <p>
+            La iguana es un reptil perteneciente a la familia Iguanadiae. Su tamaño está entre los 15 cm hasta los 2 metros de largo y puede llegar a pesar unos 15 kg. Cuando están jóvenes tienen una coloración con tonos verdes y al ir madurando predomina un color
+            grisáceo con crestas o espinas en su espalda. <br> <br> La alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años son herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal
+            que puede ser domesticado.
+        </p>
+
+</article>
 
 
+<footer>
+    <h2>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h2>
+</footer>
 </body>
 
 </html>
