--- a/IGUANAS web/iguana.html
+++ b/IGUANAS web/iguana.html
@@ -28,8 +28,12 @@
 </article>
 
 
+<nav>
+    <h2>CARACTERÍSTICAS</h2>
+</nav>
+
 <footer>
-    <h2>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h2>
+    <h3>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h3>
 </footer>
 </body>
 
