--- a/Tarea CV/_!DOCTYPE html_.html
+++ b/Tarea CV/_!DOCTYPE html_.html
@@ -19,25 +19,25 @@
             Presentation
         </h3>
 
-        <p1>Environmental engineer and photographer, in search of new challenges, contacts you for the job oportunity that you offer nowadays. Due to the pandemic, I’ve decided to complement my studies with Data Science and some Programming, Marketing and
-            Branding courses. Proactive, and always enthusiast to learn more, I hope to contribute with my effort and companionship to your work.</p1>
+        <p id="presentacion">Environmental engineer and photographer, in search of new challenges, contacts you for the job oportunity that you offer nowadays. Due to the pandemic, I’ve decided to complement my studies with Data Science and some Programming, Marketing and
+            Branding courses. Proactive, and always enthusiast to learn more, I hope to contribute with my effort and companionship to your work.</p>
 
     </div>
-    <img src="https://yt3.ggpht.com/a-/AAuE7mB1ezBaEAANZd-i7LDDqUQCxRCIsnwKPY-oVg=s900-mo-c-c0xffffffff-rj-k-no" width="200" height="200" style="float:right">
-    <div2>
+    <img src="https://yt3.ggpht.com/a-/AAuE7mB1ezBaEAANZd-i7LDDqUQCxRCIsnwKPY-oVg=s900-mo-c-c0xffffffff-rj-k-no" style="float:right">
+    <div>
         <h4>
             Skills
         </h4>
-        <p>
+        <p id="a">
             Audiovisual editing, Design background, macOS, Windows, Office 365, Adobe Creative,
 
         </p>
-        <p>
+        <p id="b">
             Pycharm (Python), RStudio (R), MySQL, English, Japanese
         </p>
 
 
-    </div2>
+    </div>
 </body>
 
 </html>
