--- a/Ricomida/Ricomida.html
+++ b/Ricomida/Ricomida.html
@@ -11,7 +11,7 @@
 </head>
 <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <img class="navbar-brand" src="" href="#">
+        <a class="navbar-brand" src="" href="#" style="font-family: 'Lobster', cursive; font-weight:400; font-size: 37pt;">Ricomida</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
