--- a/Ricomida/Ricomida.html
+++ b/Ricomida/Ricomida.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style src="assets/style.css"></style>
 </head>
 <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
@@ -53,7 +54,26 @@
 
 <body>
 
+    <div class="col">
+        <article>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="card-body">
+                        <a href="#" class="btn btn-primary" style="float:left;">Enviar por correo</a>
+                        <a href="#" class="btn btn-" style="float:right">Añadir a favoritos</a>
+                    </div>
+                </div>
+            </div>
 
+
+        </article>
+    </div>
+    <section></section>
+
+    <footer></footer>
 
 
 </body>
